<resources>
    <string name="app_name">Money Flow</string>

    <string name="login_title">INICIAR SESIÓN</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="register_text">¿No tienes cuenta?</string>
    <string name="register_hyperlink"><u>Regístrate aquí.</u></string>
    <string name="title_activity_log_in">LogIn</string>

    <string name="register_title">REGISTRARSE</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="fullname_hint">Nombre Completo</string>
    <string name="upload_image"><u>Subir foto de perfil...</u></string>


    <string name="adjuntar_Archivo"><u>Adjuntar archivo...</u></string>

    <string name="register_button">Registrarse</string>
    <string name="login_text">¿Tienes cuenta?</string>
    <string name="login_hyperlink"><u>Inicia sesión aquí.</u></string>


    <string name="update_user_title">ACTUALIZAR INFORMACIÓN</string>
    <string name="update_user_button">Actualizar</string>
    <string name="update_upload_image"><u>Cambiar foto de perfil...</u></string>


    <!-- Dashboard -->
    <string name="dashboard_legend">Gastos totales del mes:</string>
    <string name="dashboard_gasto_total">8000.00</string>
    <string name="dashboard_detalle_fecha">3 de marzo, 2025</string>
    <string name="dashboard_detalle_nombre">Compras</string>
    <string name="dashboard_detalle_cantidad">4000</string>

    <string name="Boton_Registrar">Registrar</string>

    <!-- Pantalla de Registrar gastos-->
    <string name="Registrar_Gasto">Registro de <u>Gasto</u></string>
    <string name="Registrar_Gasto_Nombre">Nombre del Gasto:</string>
    <string name="Registrar_Gasto_Monto">Monto del Gasto:</string>
    <string name="Registrar_Gasto_Descripcion">Descripción del Gasto:</string>
    <string name="Registrar_Gasto_tipodepago">Tipo de Gasto:</string>
    <string-array name="categorias_gasto_array">
        <item>Comida</item>
        <item>Transporte</item>
        <item>Servicios</item>
        <item>Renta</item>
        <item>Entretenimiento</item>
        <item>Salud</item>
        <item>Educación</item>
        <item>Compras</item>
        <item>Impuestos</item>
        <item>Otros</item>
    </string-array>

    <!-- Pantalla de Registrar ingreso-->
    <string name="Registrar_ingreso">Registro de <u>Ingreso</u></string>
    <string name="Registrar_ingreso_Nombre">Nombre del Ingreso:</string>
    <string name="Registrar_ingreso_Monto">Monto del Ingreso:</string>
    <string name="Registrar_ingreso_Descripcion">Descripción del Ingreso:</string>
    <string name="Registrar_ingreso_tipodeingreso">Tipo de Ingreso:</string>
    <string-array name="ingreso_categoria_array">
        <item>Nómina</item>
        <item>Freelance</item>
        <item>Ventas</item>
        <item>Intereses Bancarios</item>
        <item>Inversiones</item>
        <item>Alquiler de Propiedades</item>
        <item>Regalías</item>
        <item>Premios o Sorteos</item>
        <item>Devoluciones o Reembolsos</item>
        <item>Otros</item>
    </string-array>


    <!-- Pantalla de Detalles de gastos-->
    <string name="Detalle_gastos_title">Gasto</string>
    <string name="Detalle_gastos_monto">4000</string>
    <string name="Detalle_gastos_fecha">3 de febrero del 2023</string>
    <string name="Detalle_gastos_TDescripcion">Descripcion:</string>
    <string name="Detalle_gastos_Descripcion">Compra de amazon</string>
    <string name="Detalle_gastos_Ttipo">Tipo de Gasto:</string>
    <string name="Detalle_gastos_tipo">Efectivo</string>
    <string name="Detalle_gastos_Tarchi_adjunto">Archivo Adjunto:</string>
    <string name="Detalle_gastos_nombre_archivo"><u>Imagen.jpg</u></string>


    <!-- Pantalla de Detalles de gastos-->
    <string name="Detalle_ingresos_title">Ingreso</string>
    <string name="Detalle_ingresos_monto">4000</string>
    <string name="Detalle_ingresos_fecha">3 de febrero del 2023</string>
    <string name="Detalle_ingresos_TDescripcion">Descripcion:</string>
    <string name="Detalle_ingresos_Descripcion">Compra de amazon</string>
    <string name="Detalle_ingresos_Ttipo">Tipo de Ingreso:</string>
    <string name="Detalle_ingresos_tipo">Nómina</string>
    <string name="Detalle_ingresos_Tarchi_adjunto">Archivo Adjunto:</string>
    <string name="Detalle_ingresos_nombre_archivo"><u>Imagen.jpg</u></string>


    <!-- Pantalla de Reportes-->
    <string name="Reportes_fecha">Fecha:</string>
    <string name="Reportes_filtrar">Filtrar por:</string>
    <string name="Reportes_filtrar1">Tipo de gasto</string>
    <string name="Reportes_comida">Comida</string>
    <string name="Reportes_fijos">Gastos fijos</string>
    <string name="Reportes_transporte">Transporte</string>
    <string name="Reportes_total">Total: </string>

    <string name="Reportes_prompt"><u>Selecciona una fecha:</u></string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_register">register</string>


    <!-- Filtros -->
    <string name="filtro_fecha">Febrero, 2025</string>


    <string name="base_url">https://api-moviles-gbqq.onrender.com/api</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>